--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -25,7 +25,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/Email2"
             android:text="Email"
-            android:textSize="20sp"
+            android:textSize="18sp"
             android:textColor="#b5abab"
             android:fontFamily="@font/avenir_book"
             android:gravity="center"
@@ -35,11 +35,11 @@
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Email_address"
-           android:text="saish@gmail.com"
+           android:text=""
            android:textColor="@color/white"
            android:gravity="center"
            android:inputType="textEmailAddress"
-           android:textSize="24sp"
+           android:textSize="20sp"
            android:ems="10"
            app:backgroundTint="@color/textGrey"
            android:fontFamily="@font/avenir_book" />
@@ -49,7 +49,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/mobile_number"
             android:text="Mobile Number"
-            android:textSize="20sp"
+            android:textSize="18sp"
             android:textColor="#b5abab"
             android:fontFamily="@font/avenir_book"
             android:gravity="center"
@@ -60,8 +60,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:textSize="24sp"
-            android:text="9844635685"
+            android:textSize="20sp"
+            android:text=""
             android:textColor="#FFFFFF"
             android:fontFamily="@font/avenir_book"
             tools:ignore="HardcodedText,MissingConstraints"
@@ -74,7 +74,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/Password2"
             android:text="@string/password"
-            android:textSize="20sp"
+            android:textSize="18sp"
             android:textColor="#b5abab"
             android:fontFamily="@font/avenir_book"
             android:gravity="center"
@@ -85,8 +85,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:textSize="24sp"
-            android:text="@string/_123456"
+            android:textSize="20sp"
+            android:text=""
             android:textColor="#FFFFFF"
             android:fontFamily="@font/avenir_book"
             tools:ignore="HardcodedText,MissingConstraints"
@@ -99,7 +99,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/confirm_Password"
             android:text="Confirm Password"
-            android:textSize="20sp"
+            android:textSize="18sp"
             android:textColor="#b5abab"
             android:fontFamily="@font/avenir_book"
             android:gravity="center"
@@ -110,8 +110,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:textSize="24sp"
-            android:text="@string/_123456"
+            android:textSize="20sp"
+            android:text=""
             android:textColor="#FFFFFF"
             android:fontFamily="@font/avenir_book"
             tools:ignore="HardcodedText,MissingConstraints"
@@ -125,7 +125,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/login2"
             android:text="@string/login"
-            android:textSize="24sp"
+            android:textSize="22sp"
             android:textColor="@color/white"
             android:fontFamily="@font/avenir_book"
             android:gravity="center"
