--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -205,7 +205,7 @@
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/favourite"
+                    android:src="@drawable/logout"
                     tools:ignore="ContentDescription" />
 
                 <Space
