--- a/app/src/main/res/layout/fragment_near_you.xml
+++ b/app/src/main/res/layout/fragment_near_you.xml
@@ -6,7 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <fragment
-        android:id="@+id/mapFragment"
+        android:id="@+id/mapNearFragment"
         android:layout_width="0dp"
         android:layout_height="200dp"
         android:name="com.google.android.gms.maps.SupportMapFragment"
@@ -21,7 +21,7 @@
         android:layout_marginHorizontal="10dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/mapFragment"
+        app:layout_constraintTop_toBottomOf="@id/mapNearFragment"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="20dp"
         android:layout_marginTop="10dp" />
