--- a/app/src/main/res/layout/fragment_otp.xml
+++ b/app/src/main/res/layout/fragment_otp.xml
@@ -60,7 +60,7 @@
             android:fontFamily="@font/avenir_book"
             android:gravity="center"
             android:inputType="number"
-            android:text="75899"
+            android:text=""
             android:textColor="#FFFFFF"
             android:textSize="20sp"
             app:backgroundTint="@color/textGrey"
@@ -88,7 +88,7 @@
             android:text="Get in !"
             android:textAllCaps="false"
             android:textColor="@color/white"
-            android:textSize="24sp"
+            android:textSize="22sp"
             app:cornerRadius="20dp"
             tools:ignore="MissingConstraints" />
 
