card details fixed

--- a/app/src/main/res/layout/place_item_adapter.xml
+++ b/app/src/main/res/layout/place_item_adapter.xml
@@ -89,23 +89,53 @@
             android:layout_marginBottom="3dp"
             android:textColor="@color/white"
             app:layout_constraintStart_toEndOf="@id/imgGuideline"
-            app:layout_constraintBottom_toTopOf="@id/distanceAndValue"
+            app:layout_constraintBottom_toTopOf="@id/placeType"
             android:padding="3dp"/>
 
         <TextView
-            android:id="@+id/distanceAndValue"
-            android:layout_width="0dp"
+            android:id="@+id/placeType"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Movie Theatre 4.5km"
+            android:text="Movie Theatre"
             android:textSize="12sp"
             android:ellipsize="end"
             android:maxLines="1"
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
             android:fontFamily="@font/avenir_medium"
-            app:layout_constraintEnd_toEndOf="@id/imgGuideline2"
             app:layout_constraintStart_toEndOf="@id/imgGuideline"
             app:layout_constraintBottom_toTopOf="@id/placeAddress"/>
+
+        <TextView
+            android:id="@+id/price"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:textSize="12sp"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="10dp"
+            android:fontFamily="@font/avenir_medium"
+            app:layout_constraintStart_toEndOf="@id/placeType"
+            app:layout_constraintBottom_toTopOf="@id/placeAddress"/>
+
+        <TextView
+            android:id="@+id/distance"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="3.2km"
+            android:textSize="12sp"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="10dp"
+            android:fontFamily="@font/avenir_medium"
+            app:layout_constraintEnd_toEndOf="@id/imgGuideline2"
+            app:layout_constraintStart_toEndOf="@id/price"
+            app:layout_constraintBottom_toTopOf="@id/placeAddress"/>
+
+
 
         <TextView
             android:id="@+id/placeAddress"
