--- a/app/src/main/res/layout/fragment_filter_options.xml
+++ b/app/src/main/res/layout/fragment_filter_options.xml
@@ -172,12 +172,15 @@
             android:textSize="20sp"
             android:textColor="#a3a3a3"
             android:fontFamily="@font/avenir_medium"
+            android:layout_marginBottom="10dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/toggleButtonExpense"
+            app:layout_constraintBottom_toTopOf="@+id/llFeatures"
             android:layout_marginVertical="15dp"
             android:layout_marginStart="20dp"/>
 
         <LinearLayout
+            android:id="@+id/llFeatures"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
