--- a/app/src/main/res/layout/fragment_confirm_password.xml
+++ b/app/src/main/res/layout/fragment_confirm_password.xml
@@ -38,7 +38,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:textSize="20sp"
-            android:text="@string/_123456"
+            android:text=""
             android:textColor="#FFFFFF"
             android:fontFamily="@font/avenir_book"
             tools:ignore="HardcodedText,MissingConstraints"
@@ -63,7 +63,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:textSize="20sp"
-            android:text="@string/_123456"
+            android:text=""
             android:textColor="#FFFFFF"
             android:fontFamily="@font/avenir_book"
             tools:ignore="HardcodedText,MissingConstraints"
