--- a/app/src/main/res/layout/place_item_adapter.xml
+++ b/app/src/main/res/layout/place_item_adapter.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginVertical="5dp"
+    android:layout_marginVertical="3dp"
+    android:elevation="15dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -54,26 +55,25 @@
 
         <ImageView
             android:id="@+id/fav"
-            android:layout_width="30dp"
+            android:layout_width="20dp"
             android:layout_height="0dp"
             android:src="@drawable/fav_unselected"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintDimensionRatio="1"
-            android:layout_marginTop="10dp"
-
+            android:layout_marginTop="5dp"
             app:layout_constraintStart_toEndOf="@id/imgGuideline2"
             android:contentDescription="@string/unFavourite" />
 
         <ImageView
             android:id="@+id/unfav"
-            android:layout_width="30dp"
+            android:layout_width="20dp"
             android:layout_height="0dp"
             android:src="@drawable/fav_selected"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintDimensionRatio="1"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="5dp"
             android:visibility="gone"
             app:layout_constraintStart_toEndOf="@id/imgGuideline2"
             android:contentDescription="@string/unFavourite" />
