--- a/app/src/main/res/drawable/bg_rating.xml
+++ b/app/src/main/res/drawable/bg_rating.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#74b72e"/>
+    <solid android:color="@color/green300"/>
     <corners android:radius="3dp"/>
     <padding
         android:bottom="5dp"
         android:top="5dp"/>
-
 </shape>
