--- a/app/src/main/res/layout/review_dialog.xml
+++ b/app/src/main/res/layout/review_dialog.xml
@@ -2,13 +2,14 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/green300"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="15dp"
-        android:background="@color/white"
+        android:background="@drawable/linear_layout_border"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -24,7 +25,7 @@
             android:gravity="center"
             android:text="Overall Rating"
             android:textColor="@color/black"
-            android:textSize="28sp" />
+            android:textSize="18sp" />
 
         <TextView
             android:layout_width="match_parent"
@@ -34,7 +35,7 @@
             android:gravity="center"
             android:text="4.5"
             android:textColor="#36b000"
-            android:textSize="38sp"
+            android:textSize="26sp"
             android:textStyle="bold" />
 
         <TextView
@@ -42,13 +43,22 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/avenir_medium"
             android:gravity="center"
-            android:text="How would you rate your experience?"
+            android:text="How would you rate your"
             android:textColor="@color/black"
-            android:textSize="24sp" />
+            android:textSize="16sp" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/avenir_medium"
+            android:gravity="center"
+            android:text="experience?"
+            android:textColor="@color/black"
+            android:textSize="16sp" />
 
         <RatingBar
             android:id="@+id/ratingBar"
-            style="?android:attr/ratingBarStyle"
+            style="?android:attr/ratingBarStyleIndicator"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -64,30 +74,34 @@
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginTop="20dp"
-            android:background="@color/black" />
+            android:background="@color/textGrey" />
+
 
         <Button
             android:id="@+id/imageView1"
-            android:layout_width="310dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginBottom="10dp"
-            android:background="#00000000"
             android:padding="10dp"
             android:text="Submit"
             android:textAllCaps="false"
             android:textColor="@color/black"
-            android:textSize="18sp" />
+            android:textSize="16sp"
+            android:background="@color/white"/>
+
+
 
 
     </LinearLayout>
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:src="@drawable/close_icon"/>
+        android:src="@drawable/close_icon"
+        android:fitsSystemWindows="true"
+        android:background="@drawable/close_btn_border"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
