--- a/app/src/main/res/layout/review_dialog.xml
+++ b/app/src/main/res/layout/review_dialog.xml
@@ -32,7 +32,7 @@
             android:gravity="center"
             android:text="Overall Rating"
             android:textColor="@color/black"
-            android:textSize="28sp" />
+            android:textSize="18sp" />
 
         <TextView
             android:layout_width="match_parent"
@@ -42,7 +42,7 @@
             android:gravity="center"
             android:text="4.5"
             android:textColor="#36b000"
-            android:textSize="38sp"
+            android:textSize="26sp"
             android:textStyle="bold" />
 
         <TextView
@@ -50,13 +50,22 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/avenir_medium"
             android:gravity="center"
-            android:text="How would you rate your experience?"
+            android:text="How would you rate your"
             android:textColor="@color/black"
-            android:textSize="24sp" />
+            android:textSize="18sp" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/avenir_medium"
+            android:gravity="center"
+            android:text="experience?"
+            android:textColor="@color/black"
+            android:textSize="18sp" />
 
         <RatingBar
             android:id="@+id/ratingBar"
-            style="?android:attr/ratingBarStyle"
+            style="?android:attr/ratingBarStyleIndicator"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -72,7 +81,7 @@
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginTop="20dp"
-            android:background="@color/black" />
+            android:background="@color/textGrey" />
 
         <Button
             android:id="@+id/imageView1"
@@ -85,7 +94,7 @@
             android:text="Submit"
             android:textAllCaps="false"
             android:textColor="@color/black"
-            android:textSize="18sp" />
+            android:textSize="16sp" />
 
 
     </LinearLayout>
