--- a/app/src/main/res/layout/review_dialog.xml
+++ b/app/src/main/res/layout/review_dialog.xml
@@ -65,16 +65,16 @@
 
         <RatingBar
             android:id="@+id/ratingBar"
-            style="?android:attr/ratingBarStyleIndicator"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginVertical="10dp"
-            android:isIndicator="true"
+            android:layout_height="30dp"
+            android:layout_marginVertical="7dp"
             android:numStars="5"
-            android:rating="3.5"
+            style="@style/customRatingBar"
+            android:rating="2.5"
+            android:layout_gravity="center"
             android:stepSize="0.1"
-            android:theme="@style/RatingBar" />
+            android:isIndicator="true"
+            app:layout_constraintEnd_toEndOf="@id/placeImg"/>
 
         <View
             android:id="@+id/SplitLine_hor1"
