--- a/app/src/main/res/layout/activity_favourites.xml
+++ b/app/src/main/res/layout/activity_favourites.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
+    android:background="#e5e5e5"
     tools:context=".view.FavouritesActivity">
 
     <com.google.android.material.appbar.AppBarLayout
